2.2.3
-----
- Fixed bug where "Not Seen" email was being sent even if backupset was listed as offline (Issue #94)
- Fixed Unhandled Exception bug on CloseEverythingAndExit()
- Added feature to truncate message, warning, and error fields generated by backup jobs (Issue #97)
- Added support for Apprise notifications (https://github.com/caronc/apprise)

2.2.2
-----
- Added option to specify backup cycle other than 1 day (Issue 91)

2.2.1
-----
- Added "offline=" option in [source-destination] section to suppress "not seen" message in report (issue #88)
- Addressed issue #90

2.2.0
-----
- Optimize email retrieval by analyzing headers first before downloading entire email. Seeing 40%-60% reduction in running time in tests
- Added options to use keepalive logic for larger inboxes to prevent timeout errors([incoming] inkeepalive= and [outgoing] outkeepalive= options in.rc file)
- Added 'date' header to outgoing emails for RFC compliance (issue #77)
- Added optional progress indicator to stdout to show emails are being read (issue #72)
- Added option to add a "last seen date" summary table for all backup sets on report (issue #73 - [report]lastseen* options in .rc file)
- Added logic to better parse incoming dates to catch simple delimiter errors (issue # 83)
- [main] applyutcoffset in .rc file is now set to 'true' by default on new installations. Avoids negative date different problems (Issue #84)
- [report] noactivitybg has been deprecated and is no longer used in the code. Background highlighting of unseen backups in HTML reports is now guided by the [report] lastseen* options in the .rc file


2.1.0
-----
- Large-scale rewrite of code
- Migrated to a python class-based structure and split code into multiple modules. Will make the
    code much easier to maintain going forward.
- Changed from comparing date/time strings to using timestamps. Makes date comparisons and
	time tracking much simpler.