@@ -4,6 +4,9 @@
 - Fixed Unhandled Exception bug on CloseEverythingAndExit()
 - Added feature to truncate message, warning, and error fields generated by backup jobs (Issue #97)
 - Added support for Apprise notifications (https://github.com/caronc/apprise)
+- If you specify -x on the command line you no longer need to specify valid outgong email server and account information in the .rc file. 
+     However, if you still want to send backup warning emails (i.e. you don't use -w) you still need to enter valid server and account information for the outgoing server. (Issue #99)
+- Fixed improper program terminatiopn method (Issue #98)
 
 2.2.2
 -----
